--- a/IOS/Baseball Recruitment/Baseball Recruitment/Base.lproj/Main.storyboard
+++ b/IOS/Baseball Recruitment/Baseball Recruitment/Base.lproj/Main.storyboard
@@ -376,6 +376,9 @@
                                                     <constraint firstAttribute="width" constant="30" id="abE-21-3h8"/>
                                                 </constraints>
                                                 <state key="normal" title="&gt;"/>
+                                                <connections>
+                                                    <action selector="pressChangeMonth:" destination="MuI-Yq-VKa" eventType="touchUpInside" id="Fu7-dR-rri"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -429,18 +432,62 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WjB-HQ-Nr4">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WjB-HQ-Nr4">
                                 <rect key="frame" x="16" y="210" width="343" height="437"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TournamentCell" id="TBH-gU-YhC">
-                                        <rect key="frame" x="0.0" y="28" width="343" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TournamentCell" rowHeight="80" id="TBH-gU-YhC" customClass="TournamentTableViewCell" customModule="Baseball_Recruitment" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="343" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="TBH-gU-YhC" id="y32-Sm-faN">
-                                            <rect key="frame" x="0.0" y="0.0" width="343" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="79.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="i6h-Ie-Szk">
+                                                    <rect key="frame" x="15" y="2" width="313" height="58"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tournament Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cMH-pD-PzN">
+                                                            <rect key="frame" x="0.0" y="0.0" width="313" height="21"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="21" id="LyL-VA-VHS"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="MxL-ea-5IM">
+                                                            <rect key="frame" x="0.0" y="29" width="313" height="29"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1K0-X2-RXM">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="154.5" height="29"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dxj-jt-h1b">
+                                                                    <rect key="frame" x="158.5" y="0.0" width="154.5" height="29"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="i6h-Ie-Szk" secondAttribute="trailing" id="K8N-81-qes"/>
+                                                <constraint firstItem="i6h-Ie-Szk" firstAttribute="leading" secondItem="y32-Sm-faN" secondAttribute="leadingMargin" id="S2C-0k-e65"/>
+                                                <constraint firstItem="i6h-Ie-Szk" firstAttribute="top" secondItem="y32-Sm-faN" secondAttribute="topMargin" constant="-9" id="r4F-Vo-e83"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="i6h-Ie-Szk" secondAttribute="bottom" constant="9" id="ws5-V7-8LF"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="dateLabel" destination="Dxj-jt-h1b" id="8bJ-Ad-7ac"/>
+                                            <outlet property="locationLabel" destination="1K0-X2-RXM" id="KzF-4J-eK6"/>
+                                            <outlet property="tournamentLabel" destination="cMH-pD-PzN" id="DIT-8o-Yq4"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -458,15 +505,58 @@
                     </view>
                     <connections>
                         <outlet property="divisionTextField" destination="rjn-wT-V2g" id="uYQ-x0-Rmm"/>
+                        <outlet property="monthButton" destination="4Gf-Vm-Sua" id="2yC-7c-uYL"/>
                         <outlet property="monthTextField" destination="m0V-FS-pO2" id="lqf-YN-zHq"/>
                         <outlet property="stateTextField" destination="cLx-fq-Fte" id="uUR-0d-oYq"/>
                         <outlet property="tournamentTableView" destination="WjB-HQ-Nr4" id="FPE-dm-Th7"/>
                         <outlet property="yearTextField" destination="GiR-ph-KHD" id="fi5-up-fje"/>
+                        <segue destination="JkW-xM-ukH" kind="presentation" identifier="ChangeOptions" id="yR7-1r-s5x"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aEY-qd-GDj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1277.5999999999999" y="851.42428785607206"/>
+        </scene>
+        <!--Simple Options Table View Controller-->
+        <scene sceneID="d88-Lv-va6">
+            <objects>
+                <tableViewController id="JkW-xM-ukH" customClass="SimpleOptionsTableViewController" customModule="Baseball_Recruitment" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="RzG-4U-0cx">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="OptionCell" textLabel="xSp-4O-U4a" style="IBUITableViewCellStyleDefault" id="V60-h4-7Fn">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="V60-h4-7Fn" id="3sJ-cR-K3j">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xSp-4O-U4a">
+                                            <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="Rdi-ch-ZKr" kind="unwind" unwindAction="unwindToTournamentViewWithSender:" id="In2-QB-hYj"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="JkW-xM-ukH" id="d8u-gd-nBr"/>
+                            <outlet property="delegate" destination="JkW-xM-ukH" id="DXq-pZ-chB"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DqJ-Sb-yZp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Rdi-ch-ZKr" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="2116" y="851"/>
         </scene>
         <!--Watchlist-->
         <scene sceneID="scy-8T-nMg">
@@ -729,6 +819,6 @@
         <image name="logo" width="248" height="220"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="YiK-DO-gdX"/>
+        <segue reference="duo-iT-TwX"/>
     </inferredMetricsTieBreakers>
 </document>
